--- a/assets/custom.css
+++ b/assets/custom.css
@@ -11,3 +11,40 @@
 .header__active-menu-item{
     font-weight: 700 !important;
 }
+
+/**** Banner Header *******/
+.banner__heading{
+    font-family: 'Playfair Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 77px;
+    line-height: 103px;
+    /* identical to box height */
+    color: #000000;
+}
+.banner__text{
+    font-family: 'Cambay';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 46px;
+    /* identical to box height */
+    color: #000000;
+}
+.banner__buttons a{
+    font-family: 'Cambay';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 46px;
+    /* identical to box height */
+    color: #FFFFFF;
+
+    border: 4px solid #FFFFFF;
+}
+.banner__buttons a::after, .banner__buttons a::before{
+    box-shadow: none;
+}
+.banner--content-align-left.banner--desktop-transparent .banner__box, .banner--content-align-right.banner--desktop-transparent .banner__box, .banner--medium.banner--desktop-transparent .banner__box{
+    max-width: 100% !important;
+}
